Collected initial article data

--- a/notebooks/Article Collection.ipynb
+++ b/notebooks/Article Collection.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,23 +31,23 @@
     "  response = requests.request(\"GET\", url, headers=headers, params=query)\n",
     "  return json.loads(response.text)\n",
     "\n",
-    "print(fetch_articles(vbm_query)['articles'])"
+    "# print(fetch_articles(vbm_query)['articles'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import date\n",
     "from dateutil.relativedelta import relativedelta\n",
     "\n",
-    "def collect_artcicles_over_time(base_query, start_yr=2016, end_yr=2020):\n",
+    "def collect_artcicles_over_time(base_query, start_yr=2016, end_yr=2020, step=14):\n",
     "  articles = []\n",
     "  start = date(start_yr, 1, 1)\n",
     "  while start.year < end_yr + 1:\n",
-    "    end = start + relativedelta(months=+1, days=-1)\n",
+    "    end = start + relativedelta(days=step)\n",
     "    # Query for mail in voting articles published within this time period.\n",
     "    querystring = base_query + f\" AND date_published:[{start.isoformat()} TO {end.isoformat()}]\"\n",
     "    res = fetch_articles(querystring)\n",
@@ -57,7 +57,79 @@
     "    start = end + relativedelta(days=+1)\n",
     "  return articles\n",
     "\n",
-    "articles = collect_artcicles_over_time(vbm_query)"
+    "articles_18 = collect_artcicles_over_time(vbm_query, start_yr=2018, end_yr=2018)\n",
+    "articles_20 = collect_artcicles_over_time(vbm_query, start_yr=2020, end_yr=2020)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num articles 4403\n",
+      "num unique ids 4403\n"
+     ]
+    }
+   ],
+   "source": [
+    "raw_articles = articles_18 + articles_20\n",
+    "print(\"num articles\", len(raw_articles))\n",
+    "ids = set(map(lambda x: x[\"id\"], raw_articles))\n",
+    "print(\"num unique ids\", len(set(ids)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save Article Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "class Article:\n",
+    "    def __init__(self, article_dict):\n",
+    "        self.id = article_dict['id']\n",
+    "        self.title = article_dict['title']\n",
+    "        self.date_published = article_dict['date_published']\n",
+    "        self.url = article_dict['canonical_url']\n",
+    "        self.domain = article_dict['domain']\n",
+    "        self.num_tweets = article_dict['number_of_tweets']\n",
+    "        self.score = article_dict['score']\n",
+    "        self.site_type = article_dict['site_type']\n",
+    "    \n",
+    "    def write_to_csv(self, csv):\n",
+    "        csv.write(f\"{self.id},{self.title},{self.date_published},{self.url},{self.domain},{self.num_tweets},{self.score},{self.site_type},\\n\")\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return f\"Article({self.id}, {self.title}, {self.url})\"\n",
+    "    \n",
+    "articles = [Article(a) for a in raw_articles]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_path = \"../data\"\n",
+    "\n",
+    "with open(data_path + \"/all_articles.csv\", \"w\") as f:\n",
+    "    for a in articles:\n",
+    "        a.write_to_csv(f)"
    ]
   },
   {
@@ -65,11 +137,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(\"num articles\", len(articles))\n",
-    "ids = set(map(lambda x: x['id'], articles))\n",
-    "print(\"num unique ids\", len(set(ids)))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
