--- a/notebooks/Article Collection.ipynb
+++ b/notebooks/Article Collection.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Collect All Article Data"
+    "## Collect All Article Data"
    ]
   },
   {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,16 +125,453 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = \"../data\"\n",
+    "article_data_path = \"../data/all_articles.csv\"\n",
     "\n",
-    "with open(data_path + \"/all_articles.csv\", \"w\") as f:\n",
+    "with open(article_data_path, \"w\") as f:\n",
     "    Article.write_csv_col_names(f)\n",
     "    for a in articles:\n",
     "        a.write_to_csv(f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Read articles into a dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>date_published</th>\n",
+       "      <th>url</th>\n",
+       "      <th>domain</th>\n",
+       "      <th>num_tweets</th>\n",
+       "      <th>score</th>\n",
+       "      <th>site_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>817272</td>\n",
+       "      <td>Trump’s Porn Star Payoff Is The Final Nail In ...</td>\n",
+       "      <td>2018-01-12 00:00:00+00:00</td>\n",
+       "      <td>http://www.politicususa.com/2018/01/12/trump-1...</td>\n",
+       "      <td>politicususa.com</td>\n",
+       "      <td>377</td>\n",
+       "      <td>8.927416</td>\n",
+       "      <td>claim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>818574</td>\n",
+       "      <td>Journalist Murdered In Mexican Border City Aft...</td>\n",
+       "      <td>2018-01-14 01:44:18+00:00</td>\n",
+       "      <td>http://www.breitbart.com/texas/2018/01/13/mexi...</td>\n",
+       "      <td>breitbart.com</td>\n",
+       "      <td>190</td>\n",
+       "      <td>6.582730</td>\n",
+       "      <td>claim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>811402</td>\n",
+       "      <td>White House to Oprah: Bring It On!</td>\n",
+       "      <td>2018-01-08 22:56:22+00:00</td>\n",
+       "      <td>https://www.infowars.com/white-house-to-oprah-...</td>\n",
+       "      <td>infowars.com</td>\n",
+       "      <td>155</td>\n",
+       "      <td>7.798293</td>\n",
+       "      <td>claim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>805188</td>\n",
+       "      <td>Trump Forced To Shut Down Failed Voter Fraud C...</td>\n",
+       "      <td>2018-01-03 19:56:09+00:00</td>\n",
+       "      <td>http://www.politicususa.com/2018/01/03/trump-f...</td>\n",
+       "      <td>politicususa.com</td>\n",
+       "      <td>141</td>\n",
+       "      <td>7.021348</td>\n",
+       "      <td>claim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1124048</td>\n",
+       "      <td>Dem strategist: My party’s leaders ‘blew it’ o...</td>\n",
+       "      <td>2018-01-01 00:00:00+00:00</td>\n",
+       "      <td>https://www.wnd.com/2018/10/dem-strategist-my-...</td>\n",
+       "      <td>wnd.com</td>\n",
+       "      <td>116</td>\n",
+       "      <td>6.428014</td>\n",
+       "      <td>claim</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id                                              title  \\\n",
+       "0   817272  Trump’s Porn Star Payoff Is The Final Nail In ...   \n",
+       "1   818574  Journalist Murdered In Mexican Border City Aft...   \n",
+       "2   811402                 White House to Oprah: Bring It On!   \n",
+       "3   805188  Trump Forced To Shut Down Failed Voter Fraud C...   \n",
+       "4  1124048  Dem strategist: My party’s leaders ‘blew it’ o...   \n",
+       "\n",
+       "             date_published  \\\n",
+       "0 2018-01-12 00:00:00+00:00   \n",
+       "1 2018-01-14 01:44:18+00:00   \n",
+       "2 2018-01-08 22:56:22+00:00   \n",
+       "3 2018-01-03 19:56:09+00:00   \n",
+       "4 2018-01-01 00:00:00+00:00   \n",
+       "\n",
+       "                                                 url            domain  \\\n",
+       "0  http://www.politicususa.com/2018/01/12/trump-1...  politicususa.com   \n",
+       "1  http://www.breitbart.com/texas/2018/01/13/mexi...     breitbart.com   \n",
+       "2  https://www.infowars.com/white-house-to-oprah-...      infowars.com   \n",
+       "3  http://www.politicususa.com/2018/01/03/trump-f...  politicususa.com   \n",
+       "4  https://www.wnd.com/2018/10/dem-strategist-my-...           wnd.com   \n",
+       "\n",
+       "   num_tweets     score site_type  \n",
+       "0         377  8.927416     claim  \n",
+       "1         190  6.582730     claim  \n",
+       "2         155  7.798293     claim  \n",
+       "3         141  7.021348     claim  \n",
+       "4         116  6.428014     claim  "
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "article_df = pd.read_csv(article_data_path)\n",
+    "article_df['date_published']= pd.to_datetime(article_df['date_published'])\n",
+    "article_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Claim articles: 4021\n",
+      "Fact checking articles: 224\n"
+     ]
+    }
+   ],
+   "source": [
+    "claim_df = article_df[article_df.site_type == 'claim']\n",
+    "fact_check_df = article_df[article_df.site_type == 'fact_checking']\n",
+    "\n",
+    "print(f\"Claim articles: {claim_df.shape[0]}\")\n",
+    "print(f\"Fact checking articles: {fact_check_df.shape[0]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>date_published</th>\n",
+       "      <th>url</th>\n",
+       "      <th>domain</th>\n",
+       "      <th>num_tweets</th>\n",
+       "      <th>score</th>\n",
+       "      <th>site_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4145</th>\n",
+       "      <td>2168163</td>\n",
+       "      <td>Detroit Absentee Ballot Counting Chaos Blocked...</td>\n",
+       "      <td>2020-11-04T22:30:58.000Z</td>\n",
+       "      <td>https://www.breitbart.com/politics/2020/11/04/...</td>\n",
+       "      <td>breitbart.com</td>\n",
+       "      <td>85074</td>\n",
+       "      <td>107.874397</td>\n",
+       "      <td>claim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3045</th>\n",
+       "      <td>1794041</td>\n",
+       "      <td>DOJ: Democrats Paid Pennsylvania Election Offi...</td>\n",
+       "      <td>2020-05-21T17:15:16.000Z</td>\n",
+       "      <td>https://www.breitbart.com/politics/2020/05/21/...</td>\n",
+       "      <td>breitbart.com</td>\n",
+       "      <td>80055</td>\n",
+       "      <td>89.282730</td>\n",
+       "      <td>claim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4146</th>\n",
+       "      <td>2176377</td>\n",
+       "      <td>Investigators Dispatched After Fulton County D...</td>\n",
+       "      <td>2020-11-08T16:45:42.000Z</td>\n",
+       "      <td>https://www.breitbart.com/2020-election/2020/1...</td>\n",
+       "      <td>breitbart.com</td>\n",
+       "      <td>33576</td>\n",
+       "      <td>101.003960</td>\n",
+       "      <td>claim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3945</th>\n",
+       "      <td>2081743</td>\n",
+       "      <td>Project Veritas Exposes Ilhan Omar Allies in A...</td>\n",
+       "      <td>2020-09-28T02:20:56.000Z</td>\n",
+       "      <td>https://www.breitbart.com/politics/2020/09/27/...</td>\n",
+       "      <td>breitbart.com</td>\n",
+       "      <td>18959</td>\n",
+       "      <td>102.269173</td>\n",
+       "      <td>claim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3946</th>\n",
+       "      <td>2083787</td>\n",
+       "      <td>Joe Biden's Texas Political Director Dallas Jo...</td>\n",
+       "      <td>2020-09-28T23:16:26.000Z</td>\n",
+       "      <td>https://www.thegatewaypundit.com/2020/09/joe-b...</td>\n",
+       "      <td>thegatewaypundit.com</td>\n",
+       "      <td>16590</td>\n",
+       "      <td>98.643723</td>\n",
+       "      <td>claim</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           id                                              title  \\\n",
+       "4145  2168163  Detroit Absentee Ballot Counting Chaos Blocked...   \n",
+       "3045  1794041  DOJ: Democrats Paid Pennsylvania Election Offi...   \n",
+       "4146  2176377  Investigators Dispatched After Fulton County D...   \n",
+       "3945  2081743  Project Veritas Exposes Ilhan Omar Allies in A...   \n",
+       "3946  2083787  Joe Biden's Texas Political Director Dallas Jo...   \n",
+       "\n",
+       "                date_published  \\\n",
+       "4145  2020-11-04T22:30:58.000Z   \n",
+       "3045  2020-05-21T17:15:16.000Z   \n",
+       "4146  2020-11-08T16:45:42.000Z   \n",
+       "3945  2020-09-28T02:20:56.000Z   \n",
+       "3946  2020-09-28T23:16:26.000Z   \n",
+       "\n",
+       "                                                    url                domain  \\\n",
+       "4145  https://www.breitbart.com/politics/2020/11/04/...         breitbart.com   \n",
+       "3045  https://www.breitbart.com/politics/2020/05/21/...         breitbart.com   \n",
+       "4146  https://www.breitbart.com/2020-election/2020/1...         breitbart.com   \n",
+       "3945  https://www.breitbart.com/politics/2020/09/27/...         breitbart.com   \n",
+       "3946  https://www.thegatewaypundit.com/2020/09/joe-b...  thegatewaypundit.com   \n",
+       "\n",
+       "      num_tweets       score site_type  \n",
+       "4145       85074  107.874397     claim  \n",
+       "3045       80055   89.282730     claim  \n",
+       "4146       33576  101.003960     claim  \n",
+       "3945       18959  102.269173     claim  \n",
+       "3946       16590   98.643723     claim  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(claim_df.sort_values('num_tweets',ascending=False)[:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>date_published</th>\n",
+       "      <th>url</th>\n",
+       "      <th>domain</th>\n",
+       "      <th>num_tweets</th>\n",
+       "      <th>score</th>\n",
+       "      <th>site_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>384</th>\n",
+       "      <td>898436</td>\n",
+       "      <td>Ted Cruz: Beto O'Rourke wants open border and ...</td>\n",
+       "      <td>2018-03-15T00:00:00.000Z</td>\n",
+       "      <td>https://www.politifact.com/texas/statements/20...</td>\n",
+       "      <td>politifact.com</td>\n",
+       "      <td>2802</td>\n",
+       "      <td>16.742630</td>\n",
+       "      <td>fact_checking</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2746</th>\n",
+       "      <td>1698377</td>\n",
+       "      <td>Trump's Latest Voter Fraud Misinformation</td>\n",
+       "      <td>2020-04-10T19:17:59.000Z</td>\n",
+       "      <td>https://www.factcheck.org/2020/04/trumps-lates...</td>\n",
+       "      <td>factcheck.org</td>\n",
+       "      <td>2769</td>\n",
+       "      <td>9.369649</td>\n",
+       "      <td>fact_checking</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3248</th>\n",
+       "      <td>1858904</td>\n",
+       "      <td>Trump's Absentee vs. Mail-In Ballot Spin</td>\n",
+       "      <td>2020-06-19T15:02:00.000Z</td>\n",
+       "      <td>https://www.factcheck.org/2020/06/trumps-absen...</td>\n",
+       "      <td>factcheck.org</td>\n",
+       "      <td>2464</td>\n",
+       "      <td>105.958138</td>\n",
+       "      <td>fact_checking</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3054</th>\n",
+       "      <td>1804595</td>\n",
+       "      <td>Do Mail-In Ballots Increase Risk of Voter Fraud?</td>\n",
+       "      <td>2020-05-26T22:22:14.000Z</td>\n",
+       "      <td>https://www.snopes.com/fact-check/mail-in-ball...</td>\n",
+       "      <td>snopes.com</td>\n",
+       "      <td>715</td>\n",
+       "      <td>42.956894</td>\n",
+       "      <td>fact_checking</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3648</th>\n",
+       "      <td>1988227</td>\n",
+       "      <td>How to make sure your ballot is counted this fall</td>\n",
+       "      <td>2020-08-17T04:00:00.000Z</td>\n",
+       "      <td>https://www.politifact.com/article/2020/aug/17...</td>\n",
+       "      <td>politifact.com</td>\n",
+       "      <td>600</td>\n",
+       "      <td>100.236870</td>\n",
+       "      <td>fact_checking</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           id                                              title  \\\n",
+       "384    898436  Ted Cruz: Beto O'Rourke wants open border and ...   \n",
+       "2746  1698377          Trump's Latest Voter Fraud Misinformation   \n",
+       "3248  1858904           Trump's Absentee vs. Mail-In Ballot Spin   \n",
+       "3054  1804595   Do Mail-In Ballots Increase Risk of Voter Fraud?   \n",
+       "3648  1988227  How to make sure your ballot is counted this fall   \n",
+       "\n",
+       "                date_published  \\\n",
+       "384   2018-03-15T00:00:00.000Z   \n",
+       "2746  2020-04-10T19:17:59.000Z   \n",
+       "3248  2020-06-19T15:02:00.000Z   \n",
+       "3054  2020-05-26T22:22:14.000Z   \n",
+       "3648  2020-08-17T04:00:00.000Z   \n",
+       "\n",
+       "                                                    url          domain  \\\n",
+       "384   https://www.politifact.com/texas/statements/20...  politifact.com   \n",
+       "2746  https://www.factcheck.org/2020/04/trumps-lates...   factcheck.org   \n",
+       "3248  https://www.factcheck.org/2020/06/trumps-absen...   factcheck.org   \n",
+       "3054  https://www.snopes.com/fact-check/mail-in-ball...      snopes.com   \n",
+       "3648  https://www.politifact.com/article/2020/aug/17...  politifact.com   \n",
+       "\n",
+       "      num_tweets       score      site_type  \n",
+       "384         2802   16.742630  fact_checking  \n",
+       "2746        2769    9.369649  fact_checking  \n",
+       "3248        2464  105.958138  fact_checking  \n",
+       "3054         715   42.956894  fact_checking  \n",
+       "3648         600  100.236870  fact_checking  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(fact_check_df.sort_values('num_tweets',ascending=False)[:5])"
    ]
   },
   {
