Completed tweet network data collection code

--- a/notebooks/Article Analysis.ipynb
+++ b/notebooks/Article Analysis.ipynb
@@ -220,7 +220,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -356,7 +356,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -487,13 +487,6 @@
    "source": [
     "display(fact_check_df.sort_values('num_tweets',ascending=False)[:5])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
