Add Wallach notes in network analysis notebook

--- a/notebooks/Network Analysis.ipynb
+++ b/notebooks/Network Analysis.ipynb
@@ -329,7 +329,7 @@
     "\n",
     "time_tweet_df[\"date\"] = tweet_df.created_at.apply(lambda dt: dt.date)\n",
     "time_tweet_df[\"hour\"] = tweet_df.created_at.dt.hour\n",
-    "time_tweet_df.to_csv(\"time_tweet.csv\")\n",
+    "# time_tweet_df.to_csv(\"time_tweet.csv\")\n",
     "time_tweet_df"
    ]
   },
@@ -363,7 +363,18 @@
    ],
    "source": [
     "grouped_df = time_tweet_df.groupby([\"date\", \"hour\", \"type\"]).count()[\"id\"].unstack(\"type\").fillna(0)\n",
-    "grouped_df.plot.bar(title=\"Tweet Volume over Time\", figsize=(12,8), stacked=True)"
+    "grouped_df.plot.bar(title=\"Tweet Volume over Time\", figsize=(12,8), stacked=True)\n",
+    "# Use log scale on Y axis\n",
+    "# x y plots instead of bar graph\n",
+    "# When you want to show cloud of points (summarize articles as x y plot in weird space, ex rise & decay)\n",
+    "# What are the interesting features on a per article basis\n",
+    "# SPike height, number of spikes, etc\n",
+    "# Probably generate a bunch of different metrics, most of which will be boring\n",
+    "# Each person can probably write somethign that generates a metrics\n",
+    "# Think about how to summarize articles as separate features.\n",
+    "# Use date published as a metric, (ex. time since patient 0)\n",
+    "# Term frequency inverse document frequency\n",
+    "# Exponent for exponential decay (coefficient of exponential decay)"
    ]
   },
   {
