collected lots of articles & tweets

--- a/notebooks/Article Analysis.ipynb
+++ b/notebooks/Article Analysis.ipynb
@@ -218,138 +218,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>title</th>\n",
-       "      <th>date_published</th>\n",
-       "      <th>url</th>\n",
-       "      <th>domain</th>\n",
-       "      <th>num_tweets</th>\n",
-       "      <th>score</th>\n",
-       "      <th>site_type</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>4145</th>\n",
-       "      <td>2168163</td>\n",
-       "      <td>Detroit Absentee Ballot Counting Chaos Blocked...</td>\n",
-       "      <td>2020-11-04 22:30:58+00:00</td>\n",
-       "      <td>https://www.breitbart.com/politics/2020/11/04/...</td>\n",
-       "      <td>breitbart.com</td>\n",
-       "      <td>85081</td>\n",
-       "      <td>107.872818</td>\n",
-       "      <td>claim</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3045</th>\n",
-       "      <td>1794041</td>\n",
-       "      <td>DOJ: Democrats Paid Pennsylvania Election Offi...</td>\n",
-       "      <td>2020-05-21 17:15:16+00:00</td>\n",
-       "      <td>https://www.breitbart.com/politics/2020/05/21/...</td>\n",
-       "      <td>breitbart.com</td>\n",
-       "      <td>80056</td>\n",
-       "      <td>89.312393</td>\n",
-       "      <td>claim</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4146</th>\n",
-       "      <td>2176377</td>\n",
-       "      <td>Investigators Dispatched After Fulton County D...</td>\n",
-       "      <td>2020-11-08 16:45:42+00:00</td>\n",
-       "      <td>https://www.breitbart.com/2020-election/2020/1...</td>\n",
-       "      <td>breitbart.com</td>\n",
-       "      <td>43579</td>\n",
-       "      <td>101.002586</td>\n",
-       "      <td>claim</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3945</th>\n",
-       "      <td>2081743</td>\n",
-       "      <td>Project Veritas Exposes Ilhan Omar Allies in A...</td>\n",
-       "      <td>2020-09-28 02:20:56+00:00</td>\n",
-       "      <td>https://www.breitbart.com/politics/2020/09/27/...</td>\n",
-       "      <td>breitbart.com</td>\n",
-       "      <td>18959</td>\n",
-       "      <td>102.256973</td>\n",
-       "      <td>claim</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3946</th>\n",
-       "      <td>2083787</td>\n",
-       "      <td>Joe Biden's Texas Political Director Dallas Jo...</td>\n",
-       "      <td>2020-09-28 23:16:26+00:00</td>\n",
-       "      <td>https://www.thegatewaypundit.com/2020/09/joe-b...</td>\n",
-       "      <td>thegatewaypundit.com</td>\n",
-       "      <td>16591</td>\n",
-       "      <td>98.631844</td>\n",
-       "      <td>claim</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           id                                              title  \\\n",
-       "4145  2168163  Detroit Absentee Ballot Counting Chaos Blocked...   \n",
-       "3045  1794041  DOJ: Democrats Paid Pennsylvania Election Offi...   \n",
-       "4146  2176377  Investigators Dispatched After Fulton County D...   \n",
-       "3945  2081743  Project Veritas Exposes Ilhan Omar Allies in A...   \n",
-       "3946  2083787  Joe Biden's Texas Political Director Dallas Jo...   \n",
-       "\n",
-       "                date_published  \\\n",
-       "4145 2020-11-04 22:30:58+00:00   \n",
-       "3045 2020-05-21 17:15:16+00:00   \n",
-       "4146 2020-11-08 16:45:42+00:00   \n",
-       "3945 2020-09-28 02:20:56+00:00   \n",
-       "3946 2020-09-28 23:16:26+00:00   \n",
-       "\n",
-       "                                                    url                domain  \\\n",
-       "4145  https://www.breitbart.com/politics/2020/11/04/...         breitbart.com   \n",
-       "3045  https://www.breitbart.com/politics/2020/05/21/...         breitbart.com   \n",
-       "4146  https://www.breitbart.com/2020-election/2020/1...         breitbart.com   \n",
-       "3945  https://www.breitbart.com/politics/2020/09/27/...         breitbart.com   \n",
-       "3946  https://www.thegatewaypundit.com/2020/09/joe-b...  thegatewaypundit.com   \n",
-       "\n",
-       "      num_tweets       score site_type  \n",
-       "4145       85081  107.872818     claim  \n",
-       "3045       80056   89.312393     claim  \n",
-       "4146       43579  101.002586     claim  \n",
-       "3945       18959  102.256973     claim  \n",
-       "3946       16591   98.631844     claim  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "display(claim_df.sort_values('num_tweets',ascending=False)[:5])"
+    "pd.set_option('display.max_colwidth', None)\n",
+    "# display(claim_df.sort_values('num_tweets',ascending=False)[12:22])\n",
+    "claim_df = claim_df.sort_values('num_tweets',ascending=False)\n",
+    "claim_df.to_csv(r'/Users/christinewang/Desktop/claim.csv', index = False, header=True)\n"
    ]
   },
   {
@@ -512,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
