--- a/notebooks/Network Analysis.ipynb
+++ b/notebooks/Network Analysis.ipynb
@@ -533,6 +533,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# day: 0\n",
+    "# hour: 1\n",
+    "# minute: 2\n",
+    "# second: 3\n",
+    "# month: 4\n",
+    "\n",
+    "# assumes date col already given\n",
+    "def aggregate_by(df, factor_by=0):\n",
+    "    df_cols = set(df.columns.values.tolist())\n",
+    "    \n",
+    "    if 'date' not in df_cols:\n",
+    "        df[\"date\"] = df.created_at.dt.date\n",
+    "    factor_cols = ['date', 'type']\n",
+    "    \n",
+    "    if factor_by == 1:\n",
+    "        if 'hour' not in df_cols:\n",
+    "            df[\"hour\"] = df.created_at.dt.hour\n",
+    "        factor_cols.append('hour')\n",
+    "    elif factor_by == 2:\n",
+    "        if 'minute' not in df_cols:\n",
+    "            df[\"minute\"] = df.created_at.dt.minute\n",
+    "        factor_cols.append('minute')\n",
+    "    elif factor_by == 3:\n",
+    "        if 'second' not in df_cols:\n",
+    "            df[\"second\"] = df.created_at.dt.second\n",
+    "        factor_cols.append('second')\n",
+    "    elif factor_by == 4:\n",
+    "        if 'month' not in df_cols:\n",
+    "            df[\"month\"] = df.created_at.dt.month\n",
+    "        factor_cols.append('month')\n",
+    "    \n",
+    "    grouped_df = df.groupby(factor_cols).count()[\"id\"].unstack(\"type\").fillna(0)\n",
+    "    grouped_df.plot.bar(title=\"Tweet Volume over Time\", figsize=(12,8), stacked=True)\n",
+    "    \n",
+    "\n",
+    "# aggregate_by(time_tweet_df, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
    "outputs": [
@@ -646,7 +690,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
